# lazysync

./: .gitignore  AGENTS.md  test_server_response.py  todo.md
lazysync-client/: Cargo.toml  PYTHON_BINDINGS.md  README.md  Untitled  asyncssh_tunnel_only.py  example_python_client.py  example_python_direct.py  pyproject.toml
lazysync-client/src/: lib.rs  main.rs
lazysync-python/: SCROLLBAR_STYLE_FIX.md  main.py  options.json  style.css  test.py  test_ssh_file_manager.py  todo.md
lazysync-python/backend/: __init__.py  command_executor.py  file_manager.py  rsync_command_builder.py  ssh_client.py
lazysync-python/config/: __init__.py  constants.py
lazysync-python/frontend/: __init__.py  app.py
lazysync-python/frontend/widgets/: __init__.py  browser.py  command_preview.py  options_panel.py
lazysync-python/frontend/widgets/base/: list_view_ui.py
lazysync-python/models/: __init__.py  messages.py  options.py
lazysync-python/utils/: __init__.py  logger.py
lazysync-server/: Cargo.toml  build.rs
lazysync-server/src/: main.rs
