[package]
name = "rfb_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "rfb_client"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rfb_client"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[dependencies.pyo3]
version = "0.21"
features = ["auto-initialize", "extension-module", "abi3-py37"]
optional = true

[features]
default = []
python = ["pyo3"]
