[package]
name = "rfb_server"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
prost = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tonic = { version = "0.11", features = ["transport"] }
tokio-stream = "0.1"
